--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ header{
     width: 100%;
 }
 #search{
+    width: 200px;
     height: 35px;
     font-family: 'Times New Roman', Times, serif;
     outline: solid 2px white;
@@ -132,6 +133,7 @@ body{
 }
 
 #attribute{
+    color: rgb(255, 255, 255);
     flex-direction: column;
     display: flex;
     align-items: center;
@@ -155,9 +157,41 @@ body{
 }
 
 #description{
+    align-items: center;
+    display: flex;
+    flex-direction: column-reverse;
     box-shadow: inset -5px -5px 5px rgb(0, 0, 0);
-    background-color: white;
+    background-image: url(./imgs/body_gray_bg.png);
     height: 95%;
     width: 95%;
     border-radius: 50px 0px 50px 50px ;
+}
+
+
+#res1 , #res2, #res3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    outline: solid 3px black;
+    background-image: url(./imgs/pokeball-big.677ed69c.svg);
+    border-radius: 50%;
+    margin-bottom: 10px;
+    width: 25%;
+    height: 20%;
+}
+
+#type{
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 50px;
+    width: 50px;
+    margin-bottom: 15px;
+}
+
+#typeName{
+    color: white;
+    height: 25px;
+    width: 100px;
+    text-align: center;
+    margin-bottom: 20px;
 }
